qlcplus (4.14.4) stable; urgency=low

  * Implemented autosave after 30 seconds of inactivity
  * engine: fix crash when loading fixture definitions without modes
  * DMX monitor: apply gel color immediately (thanks to jpue)
  * Virtual Console/Clock: countdown mode can now run a list of Functions
  * Virtual Console/Solo Frame: add an option to exclude functions monitored by buttons to be stopped
  * Fixture Editor: in mode editor, don't allow a channel to act on itself (thanks to Edgar Aichinger)
  * New fixture: beamZ COB 50 (thanks to Yestalgia)
  * New fixture: OXO ColorZoom 180 (thanks to David Garyga)
  * New fixture: Cameo P2 T (thanks to Christoph Müllner)
  * New fixtures: Stairville Remus HexSpot 515, Remus QuadZoom 610, Varytec GigaBar 240 LED, Stairville RevueLED 120 COB True White (thanks to Liam Clark)
  * New fixtures: MagicFX Eco2Jet, Psyco2Jet, Stage Flame, SmokeJet, StadiumShot III, StadiumBlower, StadiumBlaster, SwirlFan II (thanks to Liam Clark)
  * New fixture: Martin ERA 150 Wash (thanks to Liam Clark)
  * New fixtures: Eurolite LED Silent PAR 6, beamZ BT430 PAR (thanks to Pascal Fleury)
  * New fixtures: lightmaXX LED Gun, Cameo Octafly XS (thanks to Arnaud)
  * New fixture: ColorKey Scorpius (thanks to David Himes)
  * New fixture: Varytec LED Derby ST (thanks to Valentin Simson)
  * New fixtures: ETC ColorSource Fresnel V, LDDE NanoPix Cyc, LDDE Spectra MasterD 1000 (thanks to Edgar Aichinger)
  * New fixtures: ACME Ginamp, Astera Titan Tube FP1 (thanks to Michael Tosatto)
  * New fixture: UKing ZQ01137 18x RGB+UV PAR (thanks to Adrienne Teicher)
  * New fixture: Eliminator Lighting MEGA HEX L PAR (thanks to Jan Willem)
  * New fixture: Stairville LED Vintage Bowl 50 RGBA (thanks to Jean-Daniel Garcia)
  * New fixture: beamZ Blaze 1200 (thanks to Fede79)

-- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 4 Jan 2026 18:19:20 +0200

qlcplus (4.14.3) stable; urgency=high

  * engine: fix intensity channels getting stuck on fade out