@@ -3,6 +3,7 @@ qlcplus (4.14.4) stable; urgency=low
   * Implemented autosave after 30 seconds of inactivity
   * engine: fix crash when loading fixture definitions without modes
   * DMX monitor: apply gel color immediately (thanks to jpue)
+  * Show Manager: fix crash with an infinite duration RGBMatrix
   * Virtual Console/Clock: countdown mode can now run a list of Functions
   * Virtual Console/Solo Frame: add an option to exclude functions monitored by buttons to be stopped
   * Fixture Editor: in mode editor, don't allow a channel to act on itself (thanks to Edgar Aichinger)
